@@ -1,0 +1,8 @@
+# 
+module MessageRecipientBccBuildExtension
+  include MessageRecipientBuildExtension
+  
+  def kind #:nodoc:
+    'bcc'
+  end
+end
