@@ -1,0 +1,8 @@
+# 
+module MessageRecipientCcBuildExtension
+  include MessageRecipientBuildExtension
+  
+  def kind #:nodoc:
+    'cc'
+  end
+end
