@@ -1,0 +1,8 @@
+# 
+module MessageRecipientToBuildExtension
+  include MessageRecipientBuildExtension
+  
+  def kind #:nodoc:
+    'to'
+  end
+end
